# ditto-ai-avatar

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  environment.yaml  pyproject.toml  requirements.txt  test_img.py  test_video.py
core/atomic_components/: wav2feat.py  writer.py
garage/: color_analyzer.py  face_color_analyzer.py  index.html  streaming_server.py
src/: api.py  llm_chain.py  main.py  model_pool.py  params.py  prompt.py  schemas.py  services.py  video_processor.py
src/v1/: router.py  schemas.py  services.py
src/v1/avatar_generation/: lipsync_model.py  tts_processor.py  video_pipeline.py
src/v1/chat/: llm_chain.py  prompts.py
static/css/: style.css
static/js/: main.js
templates/: index.html
